# Code-Analyser

./: .gitignore  README.md  cq_report.json  cqia.db  pyproject.toml  report.json  report.md
reports/: report_1.json  report_11.json  report_12.json  report_13.json  report_14.json  report_14.md  report_2.json  report_3.json  report_4.json  report_5.json  report_6.json  report_7.json
samples/mini-python-repo/: hello.py
src/: cqia_cli.py
src/config/: ast_parser.py  llm_config.py
src/core/: dep_graph.py  reporter.py  severity.py  storage.py  utils.py
src/core/agent/: agent_controller.py
src/core/analyzers/: __init__.py  js_analyzer.py  manager.py  python_analyzer.py
src/core/app/: main.py
src/core/app/api/: routes.py  schemas.py
src/core/rag/: embeddings.py  retriever.py  vector_storage.py
src/core/services/: job_manager.py  qa_service.py  rag_service.py
src/core/viz/: visualization_data.py
src/cq_agent/: cli.py
src/cq_agent/ingestion/: fs_ingestor.py
src/cq_agent/reporter/: json_report.py
src/integrations/: github_integration.py
src2 samples/mini-python-repo/: hello.py
src2 tests/: test_ingestor.py  test_python_complexity.py
src2/cli/: main.py
src2/cq_agent/: cli.py
src2/cq_agent/analysis/: aggregator.py
src2/cq_agent/analyzers/: base.py  js_basic.py  python_complexity.py
src2/cq_agent/reporter/: json_report.py  md_report.py
src2/utils/: file_loader.py
tests/: test_explain_issue.py  test_ingestor.py  test_python_analyzer.py  test_reporter.py
