[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cq-agent"
version = "0.1.0"
description = "Code Quality Intelligence Agent - Phase 0"
authors = [{ name = "Chinmay Chaudhari" }]
dependencies = [
    "typer>=0.12.0",
]
requires-python = ">=3.11"
readme = "README.md"
